--- a/MimeTypes/MimeTypes.csproj
+++ b/MimeTypes/MimeTypes.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.1.0</Version>
+    <Authors>Smolyanchenko Artem</Authors>
+    <Company />
+    <Product />
+    <Description>Simple library for resolve MIME types</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/MiNGRotten/MimeTypes</PackageProjectUrl>
+    <PackageId>MimeTypesStandart</PackageId>
   </PropertyGroup>
 
 </Project>
